# GActionCmakeTest

./: CMakeLists.txt  README.md
.github/workflows/: github_action_cmake.yml
src/: main.cpp
